src/Slang.Sdk/Layer1-Interop/SlangNativeInterop.cs


    [LibraryImport(LibraryName)]
    internal static partial nint VariableReflection_FindModifier(
        nint variableReflection, 
        int modifierId);

    [LibraryImport(LibraryName)]
    internal static partial uint VariableReflection_GetUserAttributeCount(nint variableReflection);

    [LibraryImport(LibraryName)]
    internal static partial nint VariableReflection_GetUserAttributeByIndex(
        nint variableReflection, 
        uint index);

    [LibraryImport(LibraryName)]
    internal static partial nint VariableReflection_FindAttributeByName(
        nint variableReflection, 
        byte* name);

    [LibraryImport(LibraryName)]
    internal static partial nint VariableReflection_FindUserAttributeByName(
        nint variableReflection, 
        byte* name);

    [LibraryImport(LibraryName)]
    [return: MarshalAs(UnmanagedType.U1)]
    internal static partial bool VariableReflection_HasDefaultValue(nint variableReflection);

    [LibraryImport(LibraryName)]
    internal static partial int VariableReflection_GetDefaultValueInt(
        nint variableReflection, 
        long* value);

    [LibraryImport(LibraryName)]
    internal static partial nint VariableReflection_GetGenericContainer(nint variableReflection);

    [LibraryImport(LibraryName)]
    internal static partial nint VariableReflection_ApplySpecializations(
        nint variableReflection, 
        void** specializations, 
        int count);

    #endregion

    #region VariableLayoutReflection API

    [LibraryImport(LibraryName)]
    internal static partial void VariableLayoutReflection_Release(nint variableLayoutReflection);

    [LibraryImport(LibraryName)]
    internal static partial nint VariableLayoutReflection_GetNative(nint variableLayoutReflection);

    [LibraryImport(LibraryName)]
    internal static partial nint VariableLayoutReflection_GetVariable(nint variableLayoutReflection);

    [LibraryImport(LibraryName)]
    internal static partial byte* VariableLayoutReflection_GetName(nint variableLayoutReflection);

    [LibraryImport(LibraryName)]
    internal static partial nint VariableLayoutReflection_FindModifier(
        nint variableLayoutReflection, 
        int modifierId);

    [LibraryImport(LibraryName)]
    internal static partial nint VariableLayoutReflection_GetTypeLayout(nint variableLayoutReflection);

    [LibraryImport(LibraryName)]
    internal static partial int VariableLayoutReflection_GetCategory(nint variableLayoutReflection);

    [LibraryImport(LibraryName)]
    internal static partial uint VariableLayoutReflection_GetCategoryCount(nint variableLayoutReflection);

    [LibraryImport(LibraryName)]
    internal static partial int VariableLayoutReflection_GetCategoryByIndex(
        nint variableLayoutReflection, 
        uint index);

    [LibraryImport(LibraryName)]
    internal static partial nuint VariableLayoutReflection_GetOffset(
        nint variableLayoutReflection, 
        int category);

    [LibraryImport(LibraryName)]
    internal static partial nint VariableLayoutReflection_GetType(nint variableLayoutReflection);

    [LibraryImport(LibraryName)]
    internal static partial uint VariableLayoutReflection_GetBindingIndex(nint variableLayoutReflection);

    [LibraryImport(LibraryName)]
    internal static partial uint VariableLayoutReflection_GetBindingSpace(nint variableLayoutReflection);

    [LibraryImport(LibraryName)]
    internal static partial nint VariableLayoutReflection_GetSpace(
        nint variableLayoutReflection, 
        int category);

    [LibraryImport(LibraryName)]
    internal static partial int VariableLayoutReflection_GetImageFormat(nint variableLayoutReflection);

    [LibraryImport(LibraryName)]
    internal static partial byte* VariableLayoutReflection_GetSemanticName(nint variableLayoutReflection);

    [LibraryImport(LibraryName)]
    internal static partial nuint VariableLayoutReflection_GetSemanticIndex(nint variableLayoutReflection);

    [LibraryImport(LibraryName)]
    internal static partial uint VariableLayoutReflection_GetStage(nint variableLayoutReflection);

    [LibraryImport(LibraryName)]
    internal static partial nint VariableLayoutReflection_GetPendingDataLayout(nint variableLayoutReflection);

    #endregion

    #region FunctionReflection API

    [LibraryImport(LibraryName)]
    internal static partial void FunctionReflection_Release(nint functionReflection);

    [LibraryImport(LibraryName)]
    internal static partial nint FunctionReflection_GetNative(nint functionReflection);

    [LibraryImport(LibraryName)]
    internal static partial byte* FunctionReflection_GetName(nint functionReflection);

    [LibraryImport(LibraryName)]
    internal static partial nint FunctionReflection_GetReturnType(nint functionReflection);

    [LibraryImport(LibraryName)]
    internal static partial uint FunctionReflection_GetParameterCount(nint functionReflection);

    [LibraryImport(LibraryName)]
    internal static partial nint FunctionReflection_GetParameterByIndex(
        nint functionReflection, 
        uint index);

    [LibraryImport(LibraryName)]
    internal static partial nint FunctionReflection_FindModifier(
        nint functionReflection, 
        int modifierId);

    [LibraryImport(LibraryName)]
    internal static partial uint FunctionReflection_GetUserAttributeCount(nint functionReflection);

    [LibraryImport(LibraryName)]
    internal static partial nint FunctionReflection_GetUserAttributeByIndex(
        nint functionReflection, 
        uint index);

    [LibraryImport(LibraryName)]
    internal static partial nint FunctionReflection_FindAttributeByName(
        nint functionReflection, 
        byte* name);

    [LibraryImport(LibraryName)]
    internal static partial nint FunctionReflection_GetGenericContainer(nint functionReflection);

    [LibraryImport(LibraryName)]
    internal static partial nint FunctionReflection_ApplySpecializations(
        nint functionReflection, 
        nint genRef);

    [LibraryImport(LibraryName)]
    internal static partial nint FunctionReflection_SpecializeWithArgTypes(
        nint functionReflection, 
        uint typeCount, 
        void** types);

    [LibraryImport(LibraryName)]
    [return: MarshalAs(UnmanagedType.U1)]
    internal static partial bool FunctionReflection_IsOverloaded(nint functionReflection);

    [LibraryImport(LibraryName)]
    internal static partial uint FunctionReflection_GetOverloadCount(nint functionReflection);

    [LibraryImport(LibraryName)]
    internal static partial nint FunctionReflection_GetOverload(
        nint functionReflection, 
        uint index);

    #endregion

    #region EntryPointReflection API

    [LibraryImport(LibraryName)]
    internal static partial void EntryPointReflection_Release(nint entryPointReflection);

    [LibraryImport(LibraryName)]
    internal static partial nint EntryPointReflection_GetNative(nint entryPointReflection);

    [LibraryImport(LibraryName)]
    internal static partial nint EntryPointReflection_GetParent(nint entryPointReflection);

    [LibraryImport(LibraryName)]
    internal static partial nint EntryPointReflection_AsFunction(nint entryPointReflection);

    [LibraryImport(LibraryName)]
    internal static partial byte* EntryPointReflection_GetName(nint entryPointReflection);

    [LibraryImport(LibraryName)]
    internal static partial byte* EntryPointReflection_GetNameOverride(nint entryPointReflection);

    [LibraryImport(LibraryName)]
    internal static partial uint EntryPointReflection_GetParameterCount(nint entryPointReflection);

    [LibraryImport(LibraryName)]
    internal static partial nint EntryPointReflection_GetParameterByIndex(
        nint entryPointReflection, 
        uint index);

    [LibraryImport(LibraryName)]
    internal static partial nint EntryPointReflection_GetFunction(nint entryPointReflection);

    [LibraryImport(LibraryName)]
    internal static partial int EntryPointReflection_GetStage(nint entryPointReflection);

    [LibraryImport(LibraryName)]
    internal static partial void EntryPointReflection_GetComputeThreadGroupSize(
        nint entryPointReflection, 
        uint axisCount, 
        ulong* outSizeAlongAxis);

    [LibraryImport(LibraryName)]
    internal static partial int EntryPointReflection_GetComputeWaveSize(
        nint entryPointReflection, 
        ulong* outWaveSize);

    [LibraryImport(LibraryName)]
    [return: MarshalAs(UnmanagedType.U1)]
    internal static partial bool EntryPointReflection_UsesAnySampleRateInput(nint entryPointReflection);

    [LibraryImport(LibraryName)]
    internal static partial nint EntryPointReflection_GetVarLayout(nint entryPointReflection);

    [LibraryImport(LibraryName)]
    internal static partial nint EntryPointReflection_GetTypeLayout(nint entryPointReflection);

    [LibraryImport(LibraryName)]
    internal static partial nint EntryPointReflection_GetResultVarLayout(nint entryPointReflection);

    [LibraryImport(LibraryName)]
    [return: MarshalAs(UnmanagedType.U1)]
    internal static partial bool EntryPointReflection_HasDefaultConstantBuffer(nint entryPointReflection);

    #endregion

    #region GenericReflection API

    [LibraryImport(LibraryName)]
    internal static partial void GenericReflection_Release(nint genRefReflection);

    [LibraryImport(LibraryName)]
    internal static partial nint GenericReflection_GetNative(nint genRefReflection);

    [LibraryImport(LibraryName)]
    internal static partial byte* GenericReflection_GetName(nint genRefReflection);

    [LibraryImport(LibraryName)]
    internal static partial uint GenericReflection_GetTypeParameterCount(nint genRefReflection);

    [LibraryImport(LibraryName)]
    internal static partial nint GenericReflection_GetTypeParameter(
        nint genRefReflection, 
        uint index);

    [LibraryImport(LibraryName)]
    internal static partial uint GenericReflection_GetValueParameterCount(nint genRefReflection);

    [LibraryImport(LibraryName)]
    internal static partial nint GenericReflection_GetValueParameter(
        nint genRefReflection, 
        uint index);

    [LibraryImport(LibraryName)]
    internal static partial uint GenericReflection_GetTypeParameterConstraintCount(
        nint genRefReflection, 
        nint typeParam);

    [LibraryImport(LibraryName)]
    internal static partial nint GenericReflection_GetTypeParameterConstraintType(
        nint genRefReflection, 
        nint typeParam, 
        uint index);

    [LibraryImport(LibraryName)]
    internal static partial int GenericReflection_GetInnerKind(nint genRefReflection);

    [LibraryImport(LibraryName)]
    internal static partial nint GenericReflection_GetOuterGenericContainer(nint genRefReflection);

    [LibraryImport(LibraryName)]
    internal static partial nint GenericReflection_GetConcreteType(
        nint genRefReflection, 
        nint typeParam);

    [LibraryImport(LibraryName)]
    internal static partial int GenericReflection_GetConcreteIntVal(
        nint genRefReflection, 
        nint valueParam, 
        long* value);

    [LibraryImport(LibraryName)]
    internal static partial nint GenericReflection_ApplySpecializations(
        nint genRefReflection, 
        nint genRef);

    #endregion

    #region TypeParameterReflection API

    [LibraryImport(LibraryName)]
    internal static partial void TypeParameterReflection_Release(nint typeParameterReflection);

    [LibraryImport(LibraryName)]
    internal static partial nint TypeParameterReflection_GetNative(nint typeParameterReflection);

    [LibraryImport(LibraryName)]
    internal static partial byte* TypeParameterReflection_GetName(nint typeParameterReflection);

    [LibraryImport(LibraryName)]
    internal static partial uint TypeParameterReflection_GetIndex(nint typeParameterReflection);

    [LibraryImport(LibraryName)]
    internal static partial uint TypeParameterReflection_GetConstraintCount(nint typeParameterReflection);
